# fscord

./: .gitignore  compile.sh
cmake/: CMakeLists.txt
src/basic/: arena.c  arena.h  basic.h  math.c  math.h  ring_alloc.c  ring_alloc.h  string32.c  string32.h
src/client/: draw.c  draw.h  font.c  font.h  fscord.h  login.c  login.h  main.c  server_connection.c  server_connection.h  session.c  session.h  sound.c  sound.h  string32_handles.c  string32_handles.h
src/crypto/: rsa.c  rsa.h
src/messages/: messages.h
src/os/: os.h
src/os/linux/: linux_file.c  linux_library.c  linux_memory.c  linux_net_secure_stream.c  linux_time.c
src/os/sdl/: sdl_window.c
src/server/: c2s_handler.c  c2s_handler.h  client_manager.c  client_manager.h  main.c  s2c_sender.c  s2c_sender.h
